TERMX-13: StructureDefinition @ Github